--- a/vagrantfile
+++ b/vagrantfile
@@ -6,6 +6,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
   config.vm.provision "ansible_local" do |ansible|
     ansible.playbook = "playbook.yml"
+#    ansible.verbose = "vvv"
   end
     config.vm.provider "virtualbox" do |v|
   v.gui = true
